force-app/main/default/objects/Opposing_Counsel__c/Opposing_Counsel__c.object-meta.xml
<CustomObject>
    <label>Opposing Counsel</label>
    <nameField>
        <displayFormat>OC-{00000}</displayFormat>
        <label>Counsel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opposing Counsels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>