force-app/main/default/objects/Opposing_Counsel__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opposing Counsels</relationshipLabel>
    <relationshipName>Opposing_Counsels</relationshipName>
    <type>Lookup</type>
</CustomField>