force-app/main/default/objects/Opposing_Counsel__c/fields/Case_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Case_Counsel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case Counsel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Legal_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Legal_Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Counsel__c</referenceTo>
    <relationshipLabel>Opposing Counsels</relationshipLabel>
    <relationshipName>Opposing_Counsels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>