force-app/main/default/objects/Opposing_Counsel__c/fields/Co_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Co_Counsel__c</fullName>
    <label>Co Counsel</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>