force-app/main/default/objects/Opposing_Counsel__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opposing Counsels</relationshipLabel>
    <relationshipName>Opposing_Counsels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>