force-app/main/default/objects/Opposing_Counsel__c/fields/Hand_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Hand_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hand Delivered</label>
    <type>Checkbox</type>
</CustomField>