force-app/main/default/objects/Opposing_Counsel__c/fields/Invitation_Letter_Printed_Date2__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Letter_Printed_Date2__c</fullName>
    <label>Invitation Letter Printed Date2</label>
    <type>Date</type>
</CustomField>