force-app/main/default/objects/Opposing_Counsel__c/fields/Invitation_Letter_Suggested_Print_Date1__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Letter_Suggested_Print_Date1__c</fullName>
    <label>Invitation Letter Suggested Print Date1</label>
    <type>Date</type>
</CustomField>