force-app/main/default/objects/Opposing_Counsel__c/fields/Legal_Case__c.field-meta.xml
<CustomField>
    <fullName>Legal_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Legal Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Opposing Counsels</relationshipLabel>
    <relationshipName>Opposing_Counsels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>