force-app/main/default/objects/Opposing_Counsel__c/fields/Mailed__c.field-meta.xml
<CustomField>
    <fullName>Mailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailed</label>
    <type>Checkbox</type>
</CustomField>