force-app/main/default/objects/Opposing_Counsel__c/fields/Not_Actual_Opposing_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Not_Actual_Opposing_Counsel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Actual Opposing Counsel</label>
    <type>Checkbox</type>
</CustomField>