force-app/main/default/objects/Opposing_Counsel__c/fields/Notice_Served_To_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Notice_Served_To_Party_Name__c</fullName>
    <label>Notice Served To Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>