force-app/main/default/objects/Opposing_Counsel__c/fields/Notice_Served_To_Party_Side__c.field-meta.xml
<CustomField>
    <fullName>Notice_Served_To_Party_Side__c</fullName>
    <label>Notice Served To Party Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Defendent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>