force-app/main/default/objects/Opposing_Counsel__c/fields/Primary_Opposing_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Primary_Opposing_Counsel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Opposing Counsel</label>
    <type>Checkbox</type>
</CustomField>