force-app/main/default/objects/Opposing_Counsel__c/fields/Representing__c.field-meta.xml
<CustomField>
    <fullName>Representing__c</fullName>
    <label>Representing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>