force-app/main/default/objects/Opposing_Counsel__c/fields/Waive_Time_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Waive_Time_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive Time Restrictions</label>
    <type>Checkbox</type>
</CustomField>