force-app/main/default/objects/Opposing_Counsel__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <label>WorkOrder</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Opposing Counsels</relationshipLabel>
    <relationshipName>Opposing_Counsels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>